deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline5-app
  namespace: abc-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline5-app
  template:
    metadata:
      labels:
        app: pipeline5-app
    spec:

      containers:
      - name: nginx
        image: sshivaji555/pipeline5-app:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        volumeMounts:
          - name: html-volume
            mountPath: /usr/share/nginx/html

      volumes:
      - name: html-volume
        persistentVolumeClaim:
          claimName: pipeline5-pvc
