service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipeline5-service
  namespace: abc-bank
spec:
  type: ClusterIP
  selector:
    app: pipeline5-app
  ports:
    - port: 80
      targetPort: 80
